--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "@advanced-rest-client/events": "^0.2.22",
+    "@advanced-rest-client/icons": "^4.0.0",
     "@anypoint-web-components/awc": "^1.0.3",
     "lit-element": "^2.5.1",
     "lit-html": "^1.4.1"
   },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^5.0.1",
+    "@advanced-rest-client/arc-mock": "^5.0.0",
     "@open-wc/eslint-config": "^6.0.0",
     "@open-wc/testing": "^3.0.1",
     "@web/dev-server": "^0.1.25",
