chore: adding arc-url
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,13 @@
     "Hamac",
     "itemschange",
     "jsrsasign",
+    "openedchange",
     "queryheaders",
     "querystatuscodes",
     "selectedvalueschange",
+    "suggestionsopenedchange",
+    "urldecode",
+    "urlencode",
     "valuechange"
   ]
 }
