feat: adding response view
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,12 @@
     "itemschange",
     "jsrsasign",
     "openedchange",
+    "pageref",
     "queryheaders",
     "querystatuscodes",
     "selectedvalueschange",
     "suggestionsopenedchange",
+    "tablist",
     "urldecode",
     "urlencode",
     "valuechange"
