--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/app",
   "description": "Advanced REST Client application sources.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -26,8 +26,9 @@
     "@advanced-rest-client/libs": "^1.0.1",
     "@advanced-rest-client/monaco-support": "^1.0.1",
     "@advanced-rest-client/uuid": "^4.0.0",
-    "@anypoint-web-components/awc": "^1.0.4",
+    "@anypoint-web-components/awc": "^1.0.5",
     "@github/time-elements": "^3.1.2",
+    "@open-wc/dedupe-mixin": "^1.3.0",
     "lit-element": "^2.5.1",
     "lit-html": "^1.4.1",
     "monaco-editor": "^0.29.1",
@@ -40,16 +41,26 @@
     "@advanced-rest-client/arc-demo-helper": "^5.0.1",
     "@advanced-rest-client/arc-mock": "^5.0.0",
     "@advanced-rest-client/idb-store": "^1.0.0",
+    "@api-client/context-menu": "^0.2.0",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.1",
     "@types/har-format": "^1.2.7",
+    "@types/jexl": "^2.3.0",
     "@web/dev-server": "^0.1.25",
     "@web/test-runner": "^0.13.20",
     "@web/test-runner-playwright": "^0.8.8",
+    "babel-plugin-minify-mangle-names": "^0.5.0",
+    "browserify": "^17.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "fs-extra": "^10.0.0",
     "get-port": "^6.0.0",
     "husky": "^7.0.2",
+    "jexl": "^2.3.0",
     "jsrsasign": "^10.4.1",
     "koa-proxies": "^0.12.1",
     "lint-staged": "^11.2.3",
@@ -57,7 +68,8 @@
     "pouchdb": "^7.2.2",
     "sinon": "^11.1.2",
     "typescript": "^4.4.4",
-    "typescript-lit-html-plugin": "^0.9.0"
+    "typescript-lit-html-plugin": "^0.9.0",
+    "uglify-js": "^3.14.2"
   },
   "scripts": {
     "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
@@ -67,9 +79,10 @@
     "lint": "npm run lint:eslint",
     "format": "npm run format:eslint",
     "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium webkit",
-    "test:all": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
-    "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch",
-    "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json"
+    "test:all": "web-test-runner --config web-test-runner.config.mjs test/**/*.test.js --coverage --playwright --browsers chromium firefox webkit",
+    "test:watch": "web-test-runner --config web-test-runner.config.mjs --watch",
+    "gen:wc": "wca analyze \"*.js\" --outFile custom-elements.json",
+    "prepare": "husky install && node dev/prepare.mjs"
   },
   "eslintConfig": {
     "extends": [
