chore: adding requests base UIs
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "pageref",
     "queryheaders",
     "querystatuscodes",
+    "Restapis",
     "selectedvalueschange",
     "suggestionsopenedchange",
     "tablist",
