--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/app",
   "description": "Advanced REST Client application sources.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -28,6 +28,7 @@
     "@advanced-rest-client/uuid": "^4.0.0",
     "@anypoint-web-components/awc": "^1.0.5",
     "@github/time-elements": "^3.1.2",
+    "@material/mwc-snackbar": "^0.25.3",
     "@open-wc/dedupe-mixin": "^1.3.0",
     "lit-element": "^2.5.1",
     "lit-html": "^1.4.1",
