--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "@open-wc/testing": "^3.0.1",
     "@types/har-format": "^1.2.7",
     "@types/jexl": "^2.3.0",
+    "@types/ws": "^8.2.0",
     "@web/dev-server": "^0.1.25",
     "@web/test-runner": "^0.13.20",
     "@web/test-runner-playwright": "^0.8.8",
     "babel-plugin-minify-mangle-names": "^0.5.0",
     "browserify": "^17.0.0",
+    "chalk": "^4.1.2",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
@@ -71,7 +73,8 @@
     "sinon": "^11.1.2",
     "typescript": "^4.4.4",
     "typescript-lit-html-plugin": "^0.9.0",
-    "uglify-js": "^3.14.2"
+    "uglify-js": "^3.14.2",
+    "ws": "^8.2.3"
   },
   "scripts": {
     "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
