chore: adding request UI
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,31 @@
 {
   "cSpell.words": [
+    "authorizationchange",
     "checkedchange",
+    "chipschange",
     "cnonce",
+    "configchange",
     "formdata",
     "Hamac",
+    "headerschange",
     "itemschange",
     "jsrsasign",
     "openedchange",
     "pageref",
+    "payloadchange",
     "queryheaders",
     "querystatuscodes",
     "reindex",
+    "requestactionschange",
+    "responseactionschange",
     "Restapis",
+    "saveas",
+    "savehar",
     "selectedvalueschange",
     "suggestionsopenedchange",
     "tablist",
+    "uiconfigchange",
+    "urlchange",
     "urldecode",
     "urlencode",
     "valuechange"
