chore: adding about page
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "queryheaders",
     "querystatuscodes",
     "reindex",
+    "Renderable",
     "requestactionschange",
     "responseactionschange",
     "Restapis",
