--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
-    "@advanced-rest-client/events": "^0.2.22",
+    "@advanced-rest-client/events": "^0.2.25",
     "@advanced-rest-client/highlight": "^2.0.1",
     "@advanced-rest-client/http-code-snippets": "^4.0.0",
     "@advanced-rest-client/icons": "^4.0.0",
     "@advanced-rest-client/libs": "^1.0.1",
     "@advanced-rest-client/monaco-support": "^1.0.1",
     "@advanced-rest-client/uuid": "^4.0.0",
-    "@anypoint-web-components/awc": "^1.0.6",
+    "@anypoint-web-components/awc": "^1.0.7",
     "@github/time-elements": "^3.1.2",
     "@material/mwc-snackbar": "^0.25.3",
     "@open-wc/dedupe-mixin": "^1.3.0",
@@ -51,7 +51,7 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.1",
-    "@types/har-format": "^1.2.7",
+    "@types/har-format": "^1.2.8",
     "@types/jexl": "^2.3.0",
     "@types/ws": "^8.2.0",
     "@web/dev-server": "^0.1.25",
@@ -60,15 +60,17 @@
     "babel-plugin-minify-mangle-names": "^0.5.0",
     "browserify": "^17.0.0",
     "chalk": "^4.1.2",
+    "electron-updater": "^4.3.9",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
     "get-port": "^6.0.0",
     "husky": "^7.0.2",
+    "idb-keyval": "^6.0.3",
     "jexl": "^2.3.0",
     "jsrsasign": "^10.4.1",
     "koa-proxies": "^0.12.1",
-    "lint-staged": "^11.2.3",
+    "lint-staged": "^11.2.6",
     "oauth2-mock-server": "^3.2.0",
     "pouchdb": "^7.2.2",
     "sinon": "^11.1.2",
