--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "arcworkspace",
     "authorizationchange",
     "checkedchange",
     "chipschange",
@@ -10,6 +11,7 @@
     "headerschange",
     "itemschange",
     "jsrsasign",
+    "keyval",
     "openedchange",
     "pageref",
     "payloadchange",
