--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email": "arc@mulesoft.com"
   },
   "dependencies": {
+    "@advanced-rest-client/anypoint": "^1.0.0",
     "@advanced-rest-client/events": "^0.2.27",
     "@advanced-rest-client/google": "^1.0.0",
     "@advanced-rest-client/highlight": "^2.0.1",
@@ -46,14 +47,14 @@
     "@advanced-rest-client/arc-demo-helper": "^5.0.2",
     "@advanced-rest-client/arc-mock": "^5.0.0",
     "@advanced-rest-client/idb-store": "^1.0.0",
-    "@babel/core": "^7.15.8",
-    "@babel/eslint-parser": "^7.15.8",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.0",
     "@babel/eslint-plugin": "^7.14.5",
-    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-env": "^7.16.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@open-wc/eslint-config": "^7.0.0",
-    "@open-wc/testing": "^3.0.1",
+    "@open-wc/testing": "^3.0.2",
     "@types/har-format": "^1.2.8",
     "@types/jexl": "^2.3.0",
     "@types/ws": "^8.2.0",
@@ -79,7 +80,7 @@
     "sinon": "^11.1.2",
     "typescript": "^4.4.4",
     "typescript-lit-html-plugin": "^0.9.0",
-    "uglify-js": "^3.14.2",
+    "uglify-js": "^3.14.3",
     "ws": "^8.2.3"
   },
   "scripts": {
