chore: finishing Google Drive bindings
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "cnonce",
     "configchange",
     "formdata",
+    "gapi",
     "Hamac",
     "headerschange",
     "itemschange",
@@ -22,6 +23,7 @@
     "requestactionschange",
     "responseactionschange",
     "Restapis",
+    "restclient",
     "saveas",
     "savehar",
     "selectedvalueschange",
