--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.2",
+    "@types/gapi": "^0.0.41",
     "@types/har-format": "^1.2.8",
     "@types/jexl": "^2.3.0",
     "@types/ws": "^8.2.0",
