--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@advanced-rest-client/uuid": "^4.0.0",
     "@anypoint-web-components/awc": "^1.0.7",
     "@api-client/context-menu": "^0.2.0",
+    "@api-components/amf-components": "^1.0.0-beta.2",
     "@github/time-elements": "^3.1.2",
     "@material/mwc-snackbar": "^0.25.3",
     "@open-wc/dedupe-mixin": "^1.3.0",
+    "idb-keyval": "^6.0.3",
     "lit-element": "^2.5.1",
     "lit-html": "^1.4.1",
     "monaco-editor": "^0.29.1",
@@ -49,6 +51,7 @@
     "@advanced-rest-client/arc-demo-helper": "^5.0.2",
     "@advanced-rest-client/arc-mock": "^5.0.0",
     "@advanced-rest-client/idb-store": "^1.0.0",
+    "@api-components/amf-web-api": "^0.1.0",
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
     "@babel/eslint-plugin": "^7.14.5",
@@ -57,6 +60,7 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/gapi": "^0.0.41",
     "@types/har-format": "^1.2.8",
     "@types/jexl": "^2.3.0",
@@ -70,11 +74,12 @@
     "electron-updater": "^4.3.9",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-lit-a11y": "^2.2.0",
     "eslint-plugin-wc": "^1.3.2",
     "fs-extra": "^10.0.0",
     "get-port": "^6.0.0",
     "husky": "^7.0.2",
-    "idb-keyval": "^6.0.3",
     "jexl": "^2.3.0",
     "jsrsasign": "^10.4.1",
     "koa-proxies": "^0.12.1",
@@ -123,6 +128,8 @@
           "demo/**/*.js",
           "test/**/*.js",
           "test/*.js",
+          "dev/**/*.js",
+          "dev/**/*.mjs",
           "**/demo/**/*.html"
         ],
         "rules": {
