chore: moving resizing logic to base elements
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "openedchange",
     "pageref",
     "payloadchange",
+    "prismjs",
     "queryheaders",
     "querystatuscodes",
     "reindex",
