--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/app",
   "description": "Advanced REST Client application sources.",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "module": "index.js",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@advanced-rest-client/anypoint": "^1.0.1",
-    "@advanced-rest-client/base": "^0.1.0",
+    "@advanced-rest-client/base": "^0.1.3",
     "@advanced-rest-client/events": "^0.2.29",
     "@advanced-rest-client/google": "^1.0.0",
     "@advanced-rest-client/highlight": "^2.0.1",
@@ -44,9 +44,6 @@
     "monaco-editor": "^0.29.1",
     "prismjs": "^1.25.0"
   },
-  "peerDependencies": {
-    "jsrsasign": "^10.4.0"
-  },
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^5.0.2",
     "@advanced-rest-client/arc-mock": "^5.0.0",
@@ -56,21 +53,18 @@
     "@babel/eslint-parser": "^7.16.0",
     "@babel/eslint-plugin": "^7.14.5",
     "@babel/preset-env": "^7.16.0",
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/gapi": "^0.0.41",
-    "@types/har-format": "^1.2.8",
     "@types/jexl": "^2.3.0",
-    "@types/ws": "^8.2.0",
     "@web/dev-server": "^0.1.26",
     "@web/test-runner": "^0.13.20",
     "@web/test-runner-playwright": "^0.8.8",
     "babel-plugin-minify-mangle-names": "^0.5.0",
     "browserify": "^17.0.0",
-    "chalk": "^4.1.2",
     "electron-updater": "^4.3.9",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -78,19 +72,14 @@
     "eslint-plugin-lit-a11y": "^2.2.0",
     "eslint-plugin-wc": "^1.3.2",
     "fs-extra": "^10.0.0",
-    "get-port": "^6.0.0",
     "husky": "^7.0.2",
     "jexl": "^2.3.0",
-    "jsrsasign": "^10.4.1",
     "koa-proxies": "^0.12.1",
     "lint-staged": "^11.2.6",
-    "oauth2-mock-server": "^3.2.0",
-    "pouchdb": "^7.2.2",
-    "sinon": "^11.1.2",
+    "sinon": "^12.0.1",
     "typescript": "^4.4.4",
     "typescript-lit-html-plugin": "^0.9.0",
-    "uglify-js": "^3.14.3",
-    "ws": "^8.2.3"
+    "uglify-js": "^3.14.3"
   },
   "scripts": {
     "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
