--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@advanced-rest-client/arc-demo-helper": "^5.0.2",
     "@advanced-rest-client/arc-mock": "^5.0.0",
+    "@advanced-rest-client/electron": "^0.1.0",
     "@advanced-rest-client/idb-store": "^1.0.0",
     "@api-components/amf-web-api": "^0.1.0",
     "@babel/core": "^7.16.0",
@@ -57,6 +58,7 @@
     "@commitlint/config-conventional": "^14.1.0",
     "@open-wc/eslint-config": "^7.0.0",
     "@open-wc/testing": "^3.0.2",
+    "@types/esm": "^3.2.0",
     "@types/fs-extra": "^9.0.13",
     "@types/gapi": "^0.0.41",
     "@types/jexl": "^2.3.0",
@@ -71,7 +73,9 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-lit-a11y": "^2.2.0",
     "eslint-plugin-wc": "^1.3.2",
+    "esm": "^3.2.25",
     "fs-extra": "^10.0.0",
+    "get-port": "^6.0.0",
     "husky": "^7.0.2",
     "jexl": "^2.3.0",
     "koa-proxies": "^0.12.1",
