chore: preparing for APP bundling
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "chipschange",
     "cnonce",
     "configchange",
+    "esbuild",
     "formdata",
     "gapi",
     "Hamac",
@@ -14,6 +15,7 @@
     "jsrsasign",
     "keyval",
     "openedchange",
+    "outdir",
     "pageref",
     "payloadchange",
     "prismjs",
