--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/gapi": "^0.0.41",
     "@types/jexl": "^2.3.0",
+    "@types/pouchdb": "^6.4.0",
     "@web/dev-server": "^0.1.26",
     "@web/test-runner": "^0.13.20",
     "@web/test-runner-playwright": "^0.8.8",
