chore: adding slug when creating a REST API entry
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "ÁÄÂÀÃÅČÇĆĎÉĚËÈÊẼĔȆÍÌÎÏŇÑÓÖÒÔÕØŘŔŠŤÚŮÜÙÛÝŸ",
     "arcworkspace",
     "authorizationchange",
     "checkedchange",
@@ -37,6 +38,7 @@
     "urldecode",
     "urlencode",
     "valuechange",
-    "webservice"
+    "webservice",
+    "Žáäâàãåčçćďéěëèêẽĕȇíìîïňñóöòôõøðřŕšťúůüùûýÿžþ"
   ]
 }
